[package]
name = "paradex"
version = "0.4.10"
edition = "2021"
license = "MIT"
description = "Paradex client library"
repository  = "https://github.com/snow-avocado/paradex-rs"

[dependencies]
cached = "0.55.1"
chrono = "0.4.26"
futures-util = "0.3.31"
jsonrpsee-core = "0.24.9"
jsonrpsee-types = "0.24.9"
log = "0.4.17"
reqwest =  {version="0.11.22", features=["json"]}
rust_decimal = {version="1.36.0", features=["serde"]}
serde = "1.0.217"
serde_json = "1.0.140"
starknet-core = {git = "https://github.com/0xNBN/starknet-rs"}
starknet-crypto = {git = "https://github.com/0xNBN/starknet-rs"}
starknet-signers = {git = "https://github.com/0xNBN/starknet-rs"}
thiserror = "2.0.12"
tokio = { version = "1.45.1", features=["full"]}
tokio-tungstenite = {version = "0.27.0", features=["native-tls"]}

[dev-dependencies]
simple_logger = "5.0.0"
criterion = "0.6.0"
mimalloc = "0.1.47"

[profile.bench]
debug = true

[[bench]]
name = "order_sign"
harness = false
